Fixed fixed a problem with overlapping z-indices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,7 +276,7 @@ table {
 }
 
 .img-profile {
-    width: 350px;
+    width: 300px;
 
     margin-left: 200px;
     margin-top: 180px;
@@ -340,7 +340,7 @@ table {
 
     width: 420px;
 
-    margin-top: 70px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: 200px;   
 }
